tooling/nargo_cli/tests/snapshots/execution_success/regression_9193/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool, x: u32) {
    if a { 1_Field / [][x]; };
}
